--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="css/diseño.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/icono web.png" type="image/x-icon" />
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- barra -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="index.html">Fieldgame</a>
