--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="../css/diseño.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
     <link
       rel="shortcut icon"
       href="../images/icono web.png"
