--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="css/diseño.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/icono web.png" type="image/x-icon" />
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- barra -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="index.html">Fieldgame</a>
@@ -64,31 +64,36 @@
             </p>
           </div>
 
-          <div class="slider">
-            <input type="radio" name="slider" id="slide1" checked />
-            <input type="radio" name="slider" id="slide2" />
-            <input type="radio" name="slider" id="slide3" />
-            <input type="radio" name="slider" id="slide4" />
-            <input type="radio" name="slider" id="slide5" />
+    </header>
 
-            <div class="slides">
-              <div class="slide" id="slide1">
-                <img src="images/img1.jpg" alt="" />
-              </div>
-              <div class="slide" id="slide2">
-                <img src="images/img2.jpg" alt="" />
-              </div>
-              <div class="slide" id="slide3">
-                <img src="images/img3.png" alt="" />
-              </div>
-              <div class="slide" id="slide4">
-                <img src="images/img4.jpeg" alt="" />
-              </div>
-            </div>
+    <main>
+
+      <div class="slider">
+        <input type="radio" name="slider" id="slide1" checked />
+        <input type="radio" name="slider" id="slide2" />
+        <input type="radio" name="slider" id="slide3" />
+        <input type="radio" name="slider" id="slide4" />
+        <input type="radio" name="slider" id="slide5" />
+
+        <div class="slides">
+          <div class="slide" id="slide1">
+            <img src="images/img1.jpg" alt="" />
+          </div>
+          <div class="slide" id="slide2">
+            <img src="images/img2.jpg" alt="" />
+          </div>
+          <div class="slide" id="slide3">
+            <img src="images/img3.png" alt="" />
+          </div>
+          <div class="slide" id="slide4">
+            <img src="images/img4.jpeg" alt="" />
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </div>
+
+    </main>
 
     <footer class="footer">
       <div class="container text-center">
