versión pre final

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </main>
 
-    <footer class="footer">
+    <footer class="footerinicio">
       <div class="container text-center">
         <p>
           Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.
