--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -52,22 +52,37 @@
       </div>
     </nav>
     <!-- Contenido de la página -->
-    <section class="content">
-      <div class="container">
-        <h2>Novedades</h2>
-        <p>
-          Descubre las últimas novedades en el mundo de los videojuegos y
-          mantente al día con las últimas tendencias.
-        </p>
-        <ul>
-          <li>¡Nueva entrega de la saga X lanzada!</li>
-          <li>Se anuncia el esperado juego Y</li>
-          <li>Actualización importante para el título Z</li>
-        </ul>
-      </div>
-    </section>
+   <!-- Contenido de la página -->
+<section class="content">
+  <div class="containernove">
+    <h2>Novedades</h2>
+    <p>
+      Descubre las últimas novedades en el mundo de los videojuegos y
+      mantente al día con las últimas tendencias.
+    </p>
+    <ul class="novedades-list">
+      <li class="novedad">
+        <img src="../images/FC 24.jpg" alt="EA FC Sports 24">
+        <p>¡Nueva entrega de EA FC Sports 24</p>
+        <a
+          href="https://www.amazon.es/SPORTS-Standard-PS5-Videojuegos-Castellano/dp/B0CB6VZ3YW/ref=sr_1_1?crid=TVLZV0UNTMJ3&keywords=ea%2Bsports%2Bfc%2B24%2Bps5&qid=1692290087&sprefix=ea%2B%2Caps%2C100&sr=8-1&th=1"
+          target="_blank"
+        >Ver en Amazon</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/Red-Dead-Redemption (1).png" alt="Red Dead Redemption Remake">
+        <p>Se anuncia el esperado juego: Red Redeption Remake</p>
+        <a
+          href="https://www.rockstargames.com/es/reddeadredemption/?section=order"
+          target="_blank"
+        >Ver en Rockstar Games</a>
+      </li>
+    </ul>
+  </div>
+</section>
 
-    <footer class="footer">
+
+    <footer class="footernove">
       <div class="container text-center">
         <p>
           Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.
