--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -51,7 +51,6 @@
         </div>
       </div>
     </nav>
-    <!-- Contenido de la página -->
    <!-- Contenido de la página -->
 <section class="content">
   <div class="containernove">
@@ -62,7 +61,7 @@
     </p>
     <ul class="novedades-list">
       <li class="novedad">
-        <img src="../images/FC 24.jpg" alt="EA FC Sports 24">
+        <img src="../images/EA 24.jpg" alt="EA FC Sports 24">
         <p>¡Nueva entrega de EA FC Sports 24</p>
         <a
           href="https://www.amazon.es/SPORTS-Standard-PS5-Videojuegos-Castellano/dp/B0CB6VZ3YW/ref=sr_1_1?crid=TVLZV0UNTMJ3&keywords=ea%2Bsports%2Bfc%2B24%2Bps5&qid=1692290087&sprefix=ea%2B%2Caps%2C100&sr=8-1&th=1"
@@ -70,7 +69,7 @@
         >Ver en Amazon</a>
       </li>
       <li class="novedad">
-        <img src="../images/Red-Dead-Redemption (1).png" alt="Red Dead Redemption Remake">
+        <img src="../images/red redeption.jpg" alt="Red Dead Redemption Remake">
         <p>Se anuncia el esperado juego: Red Redeption Remake</p>
         <a
           href="https://www.rockstargames.com/es/reddeadredemption/?section=order"
@@ -80,8 +79,7 @@
     </ul>
   </div>
 </section>
-
-
+  
     <footer class="footernove">
       <div class="container text-center">
         <p>
