Inicio +fotos +pagina juegostop

--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -51,23 +51,51 @@
         </div>
       </div>
     </nav>
-    <!-- Contenido de la página -->
-    <section class="content">
-      <div class="container">
-        <h2>Juegos Top</h2>
-        <p>
-          Descubre los juegos mejor valorados por nuestra comunidad de
-          jugadores.
-        </p>
-        <ul>
-          <li>Juego A</li>
-          <li>Juego B</li>
-          <li>Juego C</li>
-        </ul>
-      </div>
-    </section>
+   <!-- Contenido de la página -->
+<section class="content">
+  <div class="container">
+    <h2>Juegos Top</h2>
+    <p>
+      Descubre los juegos mejor valorados por nuestra comunidad de
+      jugadores.
+    </p>
+    <ul class="novedades-list">
+      <li class="novedad">
+        <img src="../images/god of war.jpg" alt="EA FC Sports 24">
+        <p>God Of War (2018)  <br><b>94/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/playstation-4/god-of-war"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/EA 24.jpg" alt="Red Dead Redemption Remake">
+        <p>Se anuncia el esperado juego: Red Redemption Remake</p>
+        <a
+          href="https://www.rockstargames.com/es/reddeadredemption/?section=order"
+          target="_blank"
+        >Ver en Rockstar Games</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/EA 24.jpg" alt="Nuevo Juego 3">
+        <p>Descubre la emocionante aventura de Nuevo Juego 3</p>
+        <a
+          href="https://www.tienda-del-juego.com/nuevo-juego-3"
+          target="_blank"
+        >Ver en Tienda del Juego</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/zelda.jpg" alt="Fantasy Worlds Online">
+        <p>Zelda Tears Of The Kingdom  <br><b>96/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/switch/the-legend-of-zelda-tears-of-the-kingdom?ref=hp"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
+    </ul>
+    
 
-    <footer class="footer">
+    <footer class="footerjuego">
       <div class="container text-center">
         <p>
           Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.
