--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -64,9 +64,9 @@
         <img src="../images/EA 24.jpg" alt="EA FC Sports 24">
         <p>¡Nueva entrega de EA FC Sports 24</p>
         <a
-          href="https://www.amazon.es/SPORTS-Standard-PS5-Videojuegos-Castellano/dp/B0CB6VZ3YW/ref=sr_1_1?crid=TVLZV0UNTMJ3&keywords=ea%2Bsports%2Bfc%2B24%2Bps5&qid=1692290087&sprefix=ea%2B%2Caps%2C100&sr=8-1&th=1"
+          href="https://www.ea.com/es-es/games/ea-sports-fc/fc-24"
           target="_blank"
-        >Ver en Amazon</a>
+        >Ir a EA</a>
       </li>
       <li class="novedad">
         <img src="../images/red redeption.jpg" alt="Red Dead Redemption Remake">
