--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -61,7 +61,7 @@
     </p>
     <ul class="novedades-list">
       <li class="novedad">
-        <img src="../images/god of war.jpg" alt="EA FC Sports 24">
+        <img src="../images/god of war.jpg" alt="">
         <p>God Of War (2018)  <br><b>94/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-4/god-of-war"
@@ -69,32 +69,62 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/EA 24.jpg" alt="Red Dead Redemption Remake">
-        <p>Se anuncia el esperado juego: Red Redemption Remake</p>
+        <img src="../images/red redeption II.jpg" alt="">
+        <p>Red Redemption II <br><b>97/100</b></p>
         <a
-          href="https://www.rockstargames.com/es/reddeadredemption/?section=order"
+          href="https://www.metacritic.com/game/playstation-4/red-dead-redemption-2"
           target="_blank"
-        >Ver en Rockstar Games</a>
+        >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/EA 24.jpg" alt="Nuevo Juego 3">
-        <p>Descubre la emocionante aventura de Nuevo Juego 3</p>
+        <img src="../images/GTA-V.jpg" alt="">
+        <p>Grand Theft Auto V <br><b>97/100</b><p>
         <a
-          href="https://www.tienda-del-juego.com/nuevo-juego-3"
+          href="https://www.metacritic.com/game/playstation-4/grand-theft-auto-vs"
           target="_blank"
-        >Ver en Tienda del Juego</a>
+        >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/zelda.jpg" alt="Fantasy Worlds Online">
+        <img src="../images/zelda.jpg" alt="">
         <p>Zelda Tears Of The Kingdom  <br><b>96/100</b></p>
         <a
           href="https://www.metacritic.com/game/switch/the-legend-of-zelda-tears-of-the-kingdom?ref=hp"
           target="_blank"
         >Ir a Metacritic</a>
       </li>
+      <li class="novedad">
+        <img src="../images/batman.jpg" alt="">
+        <p>Batman Arkham City <br><b>96/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/playstation-3/batman-arkham-city"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/Elden Ring.jpg" alt="">
+        <p>Elden Ring <br><b>96/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/playstation-5/elden-ring"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/The last of us.jpg" alt="">
+        <p>The Last Of Us I <br><b>88/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/playstation-5/the-last-of-us-part-i"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
+      <li class="novedad">
+        <img src="../images/Zelda Breath of the wild.jpg" alt="">
+        <p>Zelda Breath Of The Wild <br><b>97/100</b></p>
+        <a
+          href="https://www.metacritic.com/game/switch/the-legend-of-zelda-breath-of-the-wilds"
+          target="_blank"
+        >Ir a Metacritic</a>
+      </li>
     </ul>
-    
-
     <footer class="footerjuego">
       <div class="container text-center">
         <p>
