--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <link href="../css/styles.css" rel="stylesheet">
     <link rel="shortcut icon" href="../images/icono web.png" type="image/x-icon" />
 </head>
-<body>
+<body class="contactobody">
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
