--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -15,7 +15,7 @@
       type="image/x-icon"
     />
   </head>
-  <body>
+  <body class="novedadesbody">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="../index.html">Fieldgame</a>
@@ -53,7 +53,7 @@
     </nav>
    <!-- Contenido de la página -->
 <section class="content">
-  <div class="containernove">
+  <div class="container"> 
     <h2>Novedades</h2>
     <p>
       Descubre las últimas novedades en el mundo de los videojuegos y
