Meta tags añadidos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fieldgame - Inicio</title>
+    <meta name="description" content="Descubre las últimas novedades en videojuegos y mantente al día con las tendencias en Fieldgame." />
+    <meta name="keywords" content="videojuegos, novedades, tendencias, Fieldgame, populares, games" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -77,16 +79,16 @@
 
         <div class="slides">
           <div class="slide" id="slide1">
-            <img src="images/img1.jpg" alt="" />
+            <img src="images/img1.jpg" alt="Ghost videojuego" />
           </div>
           <div class="slide" id="slide2">
-            <img src="images/img2.jpg" alt="" />
+            <img src="images/img2.jpg" alt="Blaze Runner" />
           </div>
           <div class="slide" id="slide3">
-            <img src="images/img3.png" alt="" />
+            <img src="images/img3.png" alt="Zelda Tears" />
           </div>
           <div class="slide" id="slide4">
-            <img src="images/img4.jpeg" alt="" />
+            <img src="images/img4.jpeg" alt="Neon Valorant" />
           </div>
         </div>
       </div>
