--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fieldgame - Contacto</title>
+    <meta name="description" content="Descubre las últimas novedades en videojuegos y mantente al día con las tendencias en Fieldgame." />
+    <meta name="keywords" content="videojuegos, novedades, tendencias, Fieldgame, populares, games" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
     <link rel="shortcut icon" href="../images/icono web.png" type="image/x-icon" />
