--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fieldgame - Juegos Top</title>
+    <meta name="description" content="Descubre las últimas novedades en videojuegos y mantente al día con las tendencias en Fieldgame." />
+    <meta name="keywords" content="videojuegos, novedades, tendencias, Fieldgame, populares, games" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -61,7 +63,7 @@
     </p>
     <ul class="novedades-list">
       <li class="novedad">
-        <img src="../images/god of war.jpg" alt="">
+        <img src="../images/god of war.jpg" alt="God Of War">
         <p>God Of War (2018)  <br><b>94/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-4/god-of-war"
@@ -69,7 +71,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/red redeption II.jpg" alt="">
+        <img src="../images/red redeption II.jpg" alt="Red Redemption 2">
         <p>Red Redemption II <br><b>97/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-4/red-dead-redemption-2"
@@ -77,7 +79,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/GTA-V.jpg" alt="">
+        <img src="../images/GTA-V.jpg" alt="GTA V">
         <p>Grand Theft Auto V <br><b>97/100</b><p>
         <a
           href="https://www.metacritic.com/game/playstation-4/grand-theft-auto-vs"
@@ -85,7 +87,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/zelda.jpg" alt="">
+        <img src="../images/zelda.jpg" alt="Zelda Tears Of The Kingdom">
         <p>Zelda Tears Of The Kingdom  <br><b>96/100</b></p>
         <a
           href="https://www.metacritic.com/game/switch/the-legend-of-zelda-tears-of-the-kingdom?ref=hp"
@@ -93,7 +95,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/batman.jpg" alt="">
+        <img src="../images/batman.jpg" alt="Batman">
         <p>Batman Arkham City <br><b>96/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-3/batman-arkham-city"
@@ -101,7 +103,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/Elden Ring.jpg" alt="">
+        <img src="../images/Elden Ring.jpg" alt="Elden Ring">
         <p>Elden Ring <br><b>96/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-5/elden-ring"
@@ -109,7 +111,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/The last of us.jpg" alt="">
+        <img src="../images/The last of us.jpg" alt="The Last Of Us">
         <p>The Last Of Us I <br><b>88/100</b></p>
         <a
           href="https://www.metacritic.com/game/playstation-5/the-last-of-us-part-i"
@@ -117,7 +119,7 @@
         >Ir a Metacritic</a>
       </li>
       <li class="novedad">
-        <img src="../images/Zelda Breath of the wild.jpg" alt="">
+        <img src="../images/Zelda Breath of the wild.jpg" alt="Zelda Breath Of The Wild">
         <p>Zelda Breath Of The Wild <br><b>97/100</b></p>
         <a
           href="https://www.metacritic.com/game/switch/the-legend-of-zelda-breath-of-the-wilds"
