--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -61,12 +61,30 @@
           Descubre las consolas más populares y disfruta de los mejores juegos
           en cada plataforma.
         </p>
-        <ul>
-          <li>Consola X</li>
-          <li>Consola Y</li>
-          <li>Consola Z</li>
-        </ul>
+        <div class="slider">
+          <input type="radio" name="slider" id="slide1" checked />
+          <input type="radio" name="slider" id="slide2" />
+          <input type="radio" name="slider" id="slide3" />
+          <input type="radio" name="slider" id="slide4" />
+          <input type="radio" name="slider" id="slide5" />
+  
+          <div class="slides">
+            <div class="slide" id="slide1">
+              <img src="../images/ps5.jpg" alt="Ghost videojuego" />
+            </div>
+            <div class="slide" id="slide2">
+              <img src="../images/switch.jpg" alt="Blaze Runner" />
+            </div>
+            <div class="slide" id="slide3">
+              <img src="../images/xbox.jpg" alt="Zelda Tears" />
+            </div>
+            <div class="slide" id="slide4">
+              <img src="../images/steamdeck.jpg" alt="Neon Valorant" />
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
     </section>
 
     <footer class="footer">
