--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -58,8 +58,7 @@
       <div class="container">
         <h2>Consolas</h2>
         <p>
-          Descubre las consolas más populares y disfruta de los mejores juegos
-          en cada plataforma.
+          Explora a fondo el emocionante mundo de las consolas de videojuegos,descubre las consolas más populares y toda su información.
         </p>
         <div class="slider">
           <input type="radio" name="slider" id="slide1" checked />
@@ -70,16 +69,17 @@
   
           <div class="slides">
             <div class="slide" id="slide1">
-              <img src="../images/ps5.jpg" alt="Ghost videojuego" />
+              <a href="https://www.playstation.com/es-es/ps5/" target="_blank"><img src="../images/ps5.jpg" alt="PS5" /></a>
+              
             </div>
             <div class="slide" id="slide2">
-              <img src="../images/switch.jpg" alt="Blaze Runner" />
+              <a href="https://www.nintendo.es/Hardware/Familia-Nintendo-Switch/Nintendo-Switch/Nintendo-Switch-1148779.html" target="_blank"><img src="../images/switch.jpg" alt="switch" /></a>
             </div>
             <div class="slide" id="slide3">
-              <img src="../images/xbox.jpg" alt="Zelda Tears" />
+              <a href="https://www.xbox.com/es-ES/consoles/xbox-series-x" target="_blank"></a><img src="../images/xbox.jpg" alt="xbox series x" />
             </div>
             <div class="slide" id="slide4">
-              <img src="../images/steamdeck.jpg" alt="Neon Valorant" />
+              <a href="https://store.steampowered.com/steamdeck/" target="_blank"><img src="../images/steamdeck.jpg" alt="Steam Deck" /></a>
             </div>
           </div>
         </div>
