--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -76,7 +76,7 @@
               <a href="https://www.nintendo.es/Hardware/Familia-Nintendo-Switch/Nintendo-Switch/Nintendo-Switch-1148779.html" target="_blank"><img src="../images/switch.jpg" alt="switch" /></a>
             </div>
             <div class="slide" id="slide3">
-              <a href="https://www.xbox.com/es-ES/consoles/xbox-series-x" target="_blank"></a><img src="../images/xbox.jpg" alt="xbox series x" />
+              <a href="https://www.xbox.com/es-ES/consoles/xbox-series-x" target="_blank"><img src="../images/xbox.jpg" alt="xbox series x" /></a>
             </div>
             <div class="slide" id="slide4">
               <a href="https://store.steampowered.com/steamdeck/" target="_blank"><img src="../images/steamdeck.jpg" alt="Steam Deck" /></a>
