--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 </nav>
-<!-- Contenido de la página -->
+
 <div class="container">
     <div class="form-container">
       <h1 class="text-center">Contacto</h1>
@@ -86,11 +86,15 @@
   </div>
 
 
-<footer class="footer">
+  <footer class="footer">
     <div class="container text-center">
-        <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.</p>
+        <div class="icons">
+          <a href="" target="_blank"></a><img src="../images/icono instagram.png" alt="Icono 1" class="icon">
+          <img src="../images/icono tik tok.png" alt="Icono 2" class="icon">
+          <img src="../images/icono reddit.png" alt="Icono 3" class="icon">
+        </div>
+        <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
     </div>
-</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
