--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -127,13 +127,15 @@
         >Ir a Metacritic</a>
       </li>
     </ul>
-    <footer class="footerjuego">
+    <footer class="footer">
       <div class="container text-center">
-        <p>
-          Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.
-        </p>
+          <div class="icons">
+            <img src="../images/icono instagram.png" alt="Icono 1" class="icon">
+            <img src="../images/icono tik tok.png" alt="Icono 2" class="icon">
+            <img src="../images/icono reddit.png" alt="Icono 3" class="icon">
+          </div>
+          <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
       </div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
