--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -82,13 +82,15 @@
   </div>
 </section>
   
-    <footer class="footernove">
-      <div class="container text-center">
-        <p>
-          Derechos de autor © 2023 Fieldgame. Todos los derechos reservados.
-        </p>
+<footer class="footer">
+  <div class="container text-center">
+      <div class="icons">
+          <img src="../images/icono instagram.png" alt="Icono 1" class="icon">
+          <img src="../images/icono tik tok.png" alt="Icono 2" class="icon">
+          <img src="../images/icono reddit.png" alt="Icono 3" class="icon">
       </div>
-    </footer>
+      <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
