footers finales terminados

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <footer class="footer">
       <div class="container text-center">
           <div class="icons">
-              <img src="images/icono instagram.png" alt="Icono 1" class="icon">
-              <img src="images/icono tik tok.png" alt="Icono 2" class="icon">
-              <img src="images/icono reddit.png" alt="Icono 3" class="icon">
+            <a href="https://www.instagram.com" target="_blank"><img src="../images/icono instagram.png" alt="Icono 1" class="icon"></a>
+            <a href="https://www.tiktok.com/es/" target="_blank"><img src="../images/icono tik tok.png" alt="Icono 2" class="icon"></a>
+            <a href="https://www.reddit.com/?rdt=50475" target="_blank"><img src="../images/icono reddit.png" alt="Icono 3" class="icon"></a>
           </div>
           <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
       </div>
