--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -127,7 +127,7 @@
         >Ir a Metacritic</a>
       </li>
     </ul>
-    <footer class="footer">
+    <footer class="footerjuego">
       <div class="container text-center">
           <div class="icons">
             <a href="https://www.instagram.com" target="_blank"><img src="../images/icono instagram.png" alt="Icono 1" class="icon"></a>
