--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -124,7 +124,7 @@
           <img src="../images/ps5.jpg" alt="ps5" />
           <div class="overlay">
             <p>
-              <h1>PlayStation 5, o PS5</h1><br> 
+              <h1>PlayStation 5 / PS5</h1><br> 
                La PlayStation 5, o PS5, ha llegado para revolucionar la industria
               de los videojuegos con sus características de vanguardia
               <br>
