--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -82,7 +82,7 @@
   </div>
 </section>
   
-<footer class="footer">
+<footer class="footernove">
   <div class="container text-center">
       <div class="icons">
         <a href="https://www.instagram.com" target="_blank"><img src="../images/icono instagram.png" alt="Icono 1" class="icon"></a>
