Arreglo errores pre final

--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -61,8 +61,8 @@
       Descubre los juegos mejor valorados por nuestra comunidad de
       jugadores.
     </p>
-    <ul class="novedades-list">
-      <li class="novedad">
+    <ul class="juegos-list">
+      <li class="juego">
         <img src="../images/god of war.jpg" alt="God Of War">
         <p>God Of War (2018)  <br><b>94/100</b></p>
         <a
@@ -70,7 +70,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/red redeption II.jpg" alt="Red Redemption 2">
         <p>Red Redemption II <br><b>97/100</b></p>
         <a
@@ -78,7 +78,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/GTA-V.jpg" alt="GTA V">
         <p>Grand Theft Auto V <br><b>97/100</b><p>
         <a
@@ -86,7 +86,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/zelda.jpg" alt="Zelda Tears Of The Kingdom">
         <p>Zelda Tears Of The Kingdom  <br><b>96/100</b></p>
         <a
@@ -94,7 +94,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/batman.jpg" alt="Batman">
         <p>Batman Arkham City <br><b>96/100</b></p>
         <a
@@ -102,7 +102,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/Elden Ring.jpg" alt="Elden Ring">
         <p>Elden Ring <br><b>96/100</b></p>
         <a
@@ -110,7 +110,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/The last of us.jpg" alt="The Last Of Us">
         <p>The Last Of Us I <br><b>88/100</b></p>
         <a
@@ -118,7 +118,7 @@
           target="_blank"
         >Ir a Metacritic</a>
       </li>
-      <li class="novedad">
+      <li class="juego">
         <img src="../images/Zelda Breath of the wild.jpg" alt="Zelda Breath Of The Wild">
         <p>Zelda Breath Of The Wild <br><b>97/100</b></p>
         <a
