--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,14 +86,14 @@
   </div>
 
 
-  <footer class="footer">
+  <footer class="footercontacto">
     <div class="container text-center">
         <div class="icons">
           <a href="https://www.instagram.com" target="_blank"><img src="../images/icono instagram.png" alt="Icono 1" class="icon"></a>
           <a href="https://www.tiktok.com/es/" target="_blank"><img src="../images/icono tik tok.png" alt="Icono 2" class="icon"></a>
           <a href="https://www.reddit.com/?rdt=50475" target="_blank"><img src="../images/icono reddit.png" alt="Icono 3" class="icon"></a>
           </div>
-        <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
+        <br>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
