areglo footer version movil

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,7 +93,7 @@
           <a href="https://www.tiktok.com/es/" target="_blank"><img src="../images/icono tik tok.png" alt="Icono 2" class="icon"></a>
           <a href="https://www.reddit.com/?rdt=50475" target="_blank"><img src="../images/icono reddit.png" alt="Icono 3" class="icon"></a>
           </div>
-        <br>
+        <p>Derechos de autor © 2023 Fieldgame. Todos los derechos reservados</p>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
