--- a/pages/juegostop.html
+++ b/pages/juegostop.html
@@ -219,7 +219,7 @@
 
       <li class="juego">
         <img src="../images/jedi.jpg" alt="Jedi">
-          <p>  <br><b>91/100</b></p>
+          <p>Jedi Knight Dark Forces II <br><b>91/100</b></p>
           <a
             href="https://www.metacritic.com/game/pc/star-wars-jedi-knight-dark-forces-ii"
             target="_blank"
